add load balancing on 3 ports using nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,8 @@ events {}
 # Define which servers to include in the load balancing scheme.
 http {
     upstream app {
+          server embody_app3_1:5000;
+          server embody_app2_1:5000;
           server embody_app1_1:5000;
      }
 
