--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,10 @@ version: '3.7'
 services:
     app1:
         build: app1
+    app2:
+        build: app2
+    app3:
+        build: app3
     nginx:
         container_name: nginx
         build: nginx
@@ -9,6 +13,8 @@ services:
             - 5000:80
         depends_on:
            - app1
+           - app2
+           - app3
     db:
         image: redis
         command: redis-server --appendonly yes
